// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`na začátku 1`] = `
Object {
  "auth": Object {
    "authenticated": false,
    "decodedToken": null,
    "signIn": Object {
      "errorCode": "",
      "errorMessage": "",
      "showError": false,
      "signingIn": false,
    },
    "token": null,
  },
  "casomeric": Object {
    "mezicasy": Array [],
    "stopky": Object {
      "base": null,
      "running": false,
    },
  },
  "connected": false,
  "entities": Object {
    "kategorie": Object {},
    "rocniky": Object {
      "byRoky": Object {},
      "roky": Array [],
    },
    "ucastnici": Object {
      "allIds": Array [],
      "byIds": Object {},
    },
  },
  "registrator": Object {
    "prihlaseni": Object {
      "fetching": false,
      "kategorieFilter": "",
      "sortColumn": undefined,
      "sortDir": "none",
      "textFilter": "",
    },
    "prihlasky": Object {
      "errorCode": "",
      "errorMessage": "",
      "fetching": false,
      "novaPlatba": Object {
        "castka": undefined,
        "datum": undefined,
        "poznamka": undefined,
        "typ": "hotově",
      },
      "platby": Array [],
      "prihlaska": Object {
        "datum": undefined,
        "kategorie": undefined,
        "kod": undefined,
        "mladistvyPotvrzen": undefined,
        "startCislo": undefined,
        "typ": undefined,
      },
      "saved": false,
      "saving": false,
      "showError": false,
      "ucastnikId": undefined,
      "udaje": Object {
        "adresa": undefined,
        "email": undefined,
        "jmeno": undefined,
        "klub": undefined,
        "narozeni": Object {
          "den": undefined,
          "mesic": undefined,
          "rok": undefined,
        },
        "obec": undefined,
        "pohlavi": undefined,
        "prijmeni": undefined,
        "psc": undefined,
        "stat": "Česká republika",
        "telefon": undefined,
      },
      "validateForm": false,
      "validatePlatba": false,
    },
    "ucastniciDigest": Object {
      "fetching": false,
      "kategorieFilter": "",
      "sortColumn": undefined,
      "sortDir": "none",
      "textFilter": "",
    },
  },
  "startujici": Array [],
}
`;

exports[`websocket connected 1`] = `
Object {
  "auth": Object {
    "authenticated": false,
    "decodedToken": null,
    "signIn": Object {
      "errorCode": "",
      "errorMessage": "",
      "showError": false,
      "signingIn": false,
    },
    "token": null,
  },
  "casomeric": Object {
    "mezicasy": Array [],
    "stopky": Object {
      "base": null,
      "running": false,
    },
  },
  "connected": true,
  "entities": Object {
    "kategorie": Object {},
    "rocniky": Object {
      "byRoky": Object {},
      "roky": Array [],
    },
    "ucastnici": Object {
      "allIds": Array [],
      "byIds": Object {},
    },
  },
  "registrator": Object {
    "prihlaseni": Object {
      "fetching": false,
      "kategorieFilter": "",
      "sortColumn": undefined,
      "sortDir": "none",
      "textFilter": "",
    },
    "prihlasky": Object {
      "errorCode": "",
      "errorMessage": "",
      "fetching": false,
      "novaPlatba": Object {
        "castka": undefined,
        "datum": undefined,
        "poznamka": undefined,
        "typ": "hotově",
      },
      "platby": Array [],
      "prihlaska": Object {
        "datum": undefined,
        "kategorie": undefined,
        "kod": undefined,
        "mladistvyPotvrzen": undefined,
        "startCislo": undefined,
        "typ": undefined,
      },
      "saved": false,
      "saving": false,
      "showError": false,
      "ucastnikId": undefined,
      "udaje": Object {
        "adresa": undefined,
        "email": undefined,
        "jmeno": undefined,
        "klub": undefined,
        "narozeni": Object {
          "den": undefined,
          "mesic": undefined,
          "rok": undefined,
        },
        "obec": undefined,
        "pohlavi": undefined,
        "prijmeni": undefined,
        "psc": undefined,
        "stat": "Česká republika",
        "telefon": undefined,
      },
      "validateForm": false,
      "validatePlatba": false,
    },
    "ucastniciDigest": Object {
      "fetching": false,
      "kategorieFilter": "",
      "sortColumn": undefined,
      "sortDir": "none",
      "textFilter": "",
    },
  },
  "startujici": Array [],
}
`;

exports[`websocket disconnected 1`] = `
Object {
  "auth": Object {
    "authenticated": false,
    "decodedToken": null,
    "signIn": Object {
      "errorCode": "",
      "errorMessage": "",
      "showError": false,
      "signingIn": false,
    },
    "token": null,
  },
  "casomeric": Object {
    "mezicasy": Array [],
    "stopky": Object {
      "base": null,
      "running": false,
    },
  },
  "connected": false,
  "entities": Object {
    "kategorie": Object {},
    "rocniky": Object {
      "byRoky": Object {},
      "roky": Array [],
    },
    "ucastnici": Object {
      "allIds": Array [],
      "byIds": Object {},
    },
  },
  "registrator": Object {
    "prihlaseni": Object {
      "fetching": false,
      "kategorieFilter": "",
      "sortColumn": undefined,
      "sortDir": "none",
      "textFilter": "",
    },
    "prihlasky": Object {
      "errorCode": "",
      "errorMessage": "",
      "fetching": false,
      "novaPlatba": Object {
        "castka": undefined,
        "datum": undefined,
        "poznamka": undefined,
        "typ": "hotově",
      },
      "platby": Array [],
      "prihlaska": Object {
        "datum": undefined,
        "kategorie": undefined,
        "kod": undefined,
        "mladistvyPotvrzen": undefined,
        "startCislo": undefined,
        "typ": undefined,
      },
      "saved": false,
      "saving": false,
      "showError": false,
      "ucastnikId": undefined,
      "udaje": Object {
        "adresa": undefined,
        "email": undefined,
        "jmeno": undefined,
        "klub": undefined,
        "narozeni": Object {
          "den": undefined,
          "mesic": undefined,
          "rok": undefined,
        },
        "obec": undefined,
        "pohlavi": undefined,
        "prijmeni": undefined,
        "psc": undefined,
        "stat": "Česká republika",
        "telefon": undefined,
      },
      "validateForm": false,
      "validatePlatba": false,
    },
    "ucastniciDigest": Object {
      "fetching": false,
      "kategorieFilter": "",
      "sortColumn": undefined,
      "sortDir": "none",
      "textFilter": "",
    },
  },
  "startujici": Array [],
}
`;
